--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "dateformat": "^4.5.1",
     "dotenv": "^8.2.0",
     "firebase": "^8.6.3",
     "react": "^17.0.2",
