--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sangdami",
   "version": "0.1.0",
   "private": true,
+  "main": "src/index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
@@ -40,5 +41,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "sangdami.com"
+  "devDependencies": {
+    "html-webpack-plugin": "^4.5.0"
+  }
 }
